*SVN*

* Have setup.rb create a switchtower.cmd file on Win32 platforms #2402

* Add diff_from_last_deploy to the rails switchtower rakefile template

* Add diff_from_last_deploy task (currently only works with subversion)

* Add deploy_with_migrations task.

* Make the migrate task more customizable.

* If no password is given with the -p switch, prompt for password immediately.

* Do not install a switchtower stub in the script directory. Assume the switchtower executable is in the path.

* Remove trailing newlines from commands to prevent trailing backslash #2141

* Default parameters work correctly with the generator #2218 [Scott Barron]

* Attempt to require 'rubygems' explicitly when running the switchtower utility #2134

* Make default tasks work only on app/db/web roles, so that additional roles may be created for boxes with specific needs without needing to (for instance) deploy the app to those boxes

* Default the application name to "Application" when using --apply-to

* Show the help screen instead of an error when no arguments are given

* Make SwitchTower easier to invoke programmatically via SwitchTower::CLI

* Specify the revision to release via the :revision variable (defaults to latest revision)

* Allow variables to be set via the cli using the -s switch

* Log checkouts to a "revisions.log" file

* Changed behavior of checkout to use the timestamp as the release name, instead of the revision number

* Added CVS module (very very experimental!)

* Works with public keys now, for passwordless deployment

* Subversion module recognizes the password prompt for HTTP authentication

* Preserve +x on scripts when using darcs #1929 [Scott Barron]

* When executing multiline commands, use a backslash to escape the newline